migracion a mongoDB - inicio de desarrollo

--- a/backend/env.example
+++ b/backend/env.example
@@ -2,13 +2,8 @@
 PORT=4000
 NODE_ENV=development
 
-# Base de datos (PostgreSQL por defecto)
-DB_TYPE=pg
-SQL_HOST=localhost
-SQL_PORT=5432
-SQL_USER=postgres
-SQL_PASSWORD=tu_password
-SQL_DATABASE=fastwings
+# Base de datos (MongoDB)
+MONGODB_URI=mongodb://localhost:27017/fastwings
 
 # JWT
 JWT_SECRET=tu_jwt_secret_super_seguro_aqui_cambiar_en_produccion
