--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "seed": "node src/seed/seed_superadmin.js"
   },
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -18,8 +18,9 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
     "pdfkit": "^0.13.0",
+    "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "tesseract.js": "^4.0.2",
-    "whatsapp-web.js": "^1.19.0"
+    "whatsapp-web.js": "^1.33.1"
   }
 }
