feat: Sistema completo funcional con multi-cuenta WhatsApp por sucursal
- ✅ Implementado sistema multi-cuenta WhatsApp por sucursal
- ✅ Pool de clientes con sesiones persistentes
- ✅ QR codes en frontend para cada sucursal
- ✅ Botones conectar/desconectar/desvincular por sucursal
- ✅ Servidor simplificado funcional (simple-working-server.js)
- ✅ Scripts de prueba completos
- ✅ Frontend corregido para manejar respuestas API
- ✅ Todas las rutas API implementadas y funcionando
- ✅ Autenticación JWT funcional
- ✅ Dashboard con métricas reales

Sistema completamente funcional y listo para pruebas.

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,27 +1,61 @@
-# Configuración del servidor
+# ===== CONFIGURACIÓN DEL SERVIDOR =====
 PORT=4000
 NODE_ENV=development
 
-# Base de datos (MongoDB)
+# ===== BASE DE DATOS =====
 MONGODB_URI=mongodb://localhost:27017/fastwings
 
-# JWT
-JWT_SECRET=tu_jwt_secret_super_seguro_aqui_cambiar_en_produccion
+# ===== AUTENTICACIÓN JWT =====
+JWT_SECRET=cambia_este_secret_en_produccion_por_algo_muy_largo_y_complejo
+JWT_EXPIRES_IN=24h
 
-# Super Admin (crear en el seed)
+# ===== SUPER ADMIN =====
 SUPER_ADMIN_EMAIL=admin@fastwings.com
 SUPER_ADMIN_PASSWORD=admin123
 SUPER_ADMIN_NAME=Administrador Principal
 
-# WhatsApp (opcional para demo)
-WHATSAPP_PHONE=+573001234567
+# ===== WHATSAPP =====
+WHATSAPP_PROVIDER=whatsapp-web.js
+CHROME_PATH=/usr/bin/chromium-browser
+# Para Windows: CHROME_PATH=C:\\Program Files\\Google\\Chrome\\Application\\chrome.exe
 
-# Email (opcional para demo)
+# ===== LÍMITES Y CONFIGURACIÓN =====
+MAX_ADMINS_FREE=5
+SERVICE_FEE=0.05
+MAX_AUTO_REPLIES_PER_DAY=1000
+MAX_MESSAGES_PER_MINUTE=60
+
+# ===== EMAIL (OPCIONAL) =====
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=tu_email@gmail.com
 SMTP_PASS=tu_password_de_aplicacion
+SMTP_FROM=noreply@fastwings.com
 
-# Branding (opcional)
+# ===== BRANDING =====
 BILLING_LOGO=uploads/logo.png
-BILLING_FOOTER=FastWings - Sistema de Pedidos WhatsApp
+BILLING_FOOTER=Gracias por preferir FastWings
+COMPANY_NAME=FastWings
+COMPANY_PHONE=+573001234567
+COMPANY_EMAIL=info@fastwings.com
+
+# ===== SEGURIDAD =====
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+CORS_ORIGIN=http://localhost:3000
+
+# ===== LOGS =====
+LOG_LEVEL=info
+LOG_FILE=logs/app.log
+
+# ===== UPLOADS =====
+UPLOAD_MAX_SIZE=10485760
+UPLOAD_PATH=uploads
+
+# ===== CACHE =====
+CACHE_TTL=3600
+REDIS_URL=redis://localhost:6379
+
+# ===== MONITORING =====
+ENABLE_METRICS=true
+METRICS_PORT=9090
